# indic-it3-converter

./: .testr.conf  .travis.yml  Makefile  README.rst  circle.yml  setup.cfg  tox.ini
.circleci/: config.yml
it3conv/: __init__.py  __main__.py  it3.py  it3_format.py
it3conv/tests/: test_it3conv.py
it3conv/tests/plain_text/: tel.txt
