[metadata]
name = it3conv
summary = IT3-converter for Indic scripts
description-file =
  README.rst
author = Arjuna Rao Chavala
author-email = arjunaraoc@gmail.com
classifier =
  #Framework :: Flask
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Science/Research 
  License :: MSI
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5

[files]
packages = 
    it3conv

[entry_points]
console_scripts =
    it3conv = it3conv:main

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1

